--- a/src/main/resources/fxml/studente/CompitiStudentPage.fxml
+++ b/src/main/resources/fxml/studente/CompitiStudentPage.fxml
@@ -1,17 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<?import java.net.URL?>
-<StackPane prefHeight="760" prefWidth="1050" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="application.controller.studente.CompitiController">
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
+<StackPane prefHeight="760" prefWidth="1050" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.studente.CompitiController">
 
     <stylesheets>
-        <URL value="@../../css/assenze.css"/>
+        <URL value="@../../css/assenze.css" />
     </stylesheets>
 
     <children>
@@ -20,35 +27,31 @@
             <top>
                 <BorderPane minHeight="-Infinity" prefHeight="200.0" prefWidth="1050.0" BorderPane.alignment="CENTER">
                     <BorderPane.margin>
-                        <Insets/>
+                        <Insets />
                     </BorderPane.margin>
                     <top>
-                        <BorderPane fx:id="topPane" minHeight="-Infinity" prefHeight="200.0" prefWidth="1050.0"
-                                    BorderPane.alignment="TOP_CENTER">
+                        <BorderPane fx:id="topPane" minHeight="-Infinity" prefHeight="200.0" prefWidth="1050.0" BorderPane.alignment="TOP_CENTER">
                             <bottom>
                                 <Label styleClass="titolo" text="Compiti" BorderPane.alignment="CENTER">
                                     <BorderPane.margin>
-                                        <Insets bottom="10.0"/>
+                                        <Insets bottom="10.0" />
                                     </BorderPane.margin>
                                 </Label>
                             </bottom>
                             <center>
-                                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0"
-                                      BorderPane.alignment="CENTER">
+                                <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
                                     <children>
-                                        <Label styleClass="classe" text="Classe"/>
-                                        <Label fx:id="classeLabel" styleClass="classe"/>
+                                        <Label styleClass="classe" text="Classe" />
+                                        <Label fx:id="classeLabel" styleClass="classe" />
                                     </children>
                                 </HBox>
                             </center>
                             <top>
-                                <HBox prefHeight="50.0" prefWidth="1050.0" spacing="40.0"
-                                      BorderPane.alignment="TOP_RIGHT">
+                                <HBox prefHeight="50.0" prefWidth="1050.0" spacing="40.0" BorderPane.alignment="TOP_RIGHT">
                                     <children>
-                                        <FontAwesomeIcon iconName="ARROW_LEFT" onMouseClicked="#backButtonClicked"
-                                                         size="30" styleClass="iconaFreccia">
+                                        <FontAwesomeIcon iconName="ARROW_LEFT" onMouseClicked="#backButtonClicked" size="30" styleClass="iconaFreccia">
                                             <HBox.margin>
-                                                <Insets left="5.0" top="5.0"/>
+                                                <Insets left="5.0" top="5.0" />
                                             </HBox.margin>
                                         </FontAwesomeIcon>
                                     </children>
@@ -63,40 +66,36 @@
                     <content>
                         <BorderPane>
                             <center>
-                                <VBox fx:id="compitiContainer" alignment="CENTER" spacing="20.0"
-                                      BorderPane.alignment="CENTER">
+                                <VBox fx:id="compitiContainer" alignment="CENTER" spacing="20.0" BorderPane.alignment="CENTER">
                                     <opaqueInsets>
-                                        <Insets/>
+                                        <Insets />
                                     </opaqueInsets>
                                 </VBox>
                             </center>
                         </BorderPane>
                     </content>
                     <BorderPane.margin>
-                        <Insets bottom="20.0" left="20" right="20" top="20.0"/>
+                        <Insets bottom="20.0" left="20" right="20" top="20.0" />
                     </BorderPane.margin>
                 </ScrollPane>
             </center>
         </BorderPane>
-        <BorderPane fx:id="caricaElaboratoPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
-                    minWidth="-Infinity" prefHeight="543.0" prefWidth="793.0" styleClass="mainPane">
+        <BorderPane fx:id="caricaElaboratoPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="543.0" prefWidth="793.0" styleClass="mainPane">
             <top>
                 <BorderPane prefHeight="118.0" prefWidth="600.0" styleClass="topPane" BorderPane.alignment="CENTER">
                     <bottom>
                         <Label styleClass="titolo" text="Carica elaborato" BorderPane.alignment="CENTER">
                             <BorderPane.margin>
-                                <Insets bottom="20.0"/>
+                                <Insets bottom="20.0" />
                             </BorderPane.margin>
                         </Label>
                     </bottom>
                     <top>
-                        <HBox alignment="CENTER_RIGHT" prefHeight="34.0" prefWidth="600.0"
-                              BorderPane.alignment="CENTER">
+                        <HBox alignment="CENTER_RIGHT" prefHeight="34.0" prefWidth="600.0" BorderPane.alignment="CENTER">
                             <children>
-                                <FontAwesomeIcon iconName="ARROW_LEFT" onMouseClicked="#backFromCaricaElaboratoClicked"
-                                                 size="30" styleClass="iconaFreccia" text="">
+                                <FontAwesomeIcon iconName="ARROW_LEFT" onMouseClicked="#backFromCaricaElaboratoClicked" size="30" styleClass="iconaFreccia" text="">
                                     <HBox.margin>
-                                        <Insets right="5.0" top="5.0"/>
+                                        <Insets right="5.0" top="5.0" />
                                     </HBox.margin>
                                 </FontAwesomeIcon>
                             </children>
@@ -105,45 +104,42 @@
                 </BorderPane>
             </top>
             <center>
-                <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0"
-                      BorderPane.alignment="CENTER">
+                <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" spacing="20.0" BorderPane.alignment="CENTER">
                     <children>
-                        <Label fx:id="materiaLabeld" styleClass="materiaLabel" text="Materia"/>
-                        <Label fx:id="argomentoLabel" styleClass="messageLabel" text="Argomento"/>
-                        <TextArea fx:id="commentoArea" prefHeight="48.0" prefWidth="615.0"
-                                  promptText="Commento (opzionale)"/>
-                        <Label style="-fx-font-size: 16px;" styleClass="titolo" text="Elaborati caricati:"/>
+                        <Label fx:id="materiaLabeld" styleClass="materiaLabel" text="Materia" />
+                        <Label fx:id="argomentoLabel" styleClass="messageLabel" text="Argomento" />
+                        <TextArea fx:id="commentoArea" prefHeight="48.0" prefWidth="615.0" promptText="Commento (opzionale)">
+                     <font>
+                        <Font size="14.0" />
+                     </font></TextArea>
+                        <Label style="-fx-font-size: 16px;" styleClass="titolo" text="Elaborati caricati:" />
                         <ScrollPane fitToWidth="true" prefHeight="150.0">
                             <content>
-                                <VBox fx:id="elaboratiContainer" alignment="TOP_CENTER" spacing="10"/>
+                                <VBox fx:id="elaboratiContainer" alignment="TOP_CENTER" spacing="10" />
                             </content>
                         </ScrollPane>
                     </children>
                     <BorderPane.margin>
-                        <Insets left="20.0" top="10.0"/>
+                        <Insets left="20.0" top="10.0" />
                     </BorderPane.margin>
                 </VBox>
             </center>
             <bottom>
-                <Button fx:id="inviaElaboratoButton" mnemonicParsing="false" onAction="#inviaElaboratoClicked"
-                        prefHeight="40.0" prefWidth="83.0" styleClass="buttons" text="Invia"
-                        BorderPane.alignment="CENTER">
+                <Button fx:id="inviaElaboratoButton" mnemonicParsing="false" onAction="#inviaElaboratoClicked" prefHeight="40.0" prefWidth="83.0" styleClass="buttons" text="Invia" BorderPane.alignment="CENTER">
                     <BorderPane.margin>
-                        <Insets bottom="20.0" top="20.0"/>
+                        <Insets bottom="20.0" top="20.0" />
                     </BorderPane.margin>
                 </Button>
             </bottom>
             <right>
-                <Button mnemonicParsing="false" onAction="#caricaRisorsaClicked" styleClass="compitiPane"
-                        BorderPane.alignment="CENTER">
+                <Button mnemonicParsing="false" onAction="#caricaRisorsaClicked" styleClass="compitiPane" BorderPane.alignment="CENTER">
                     <BorderPane.margin>
-                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                     </BorderPane.margin>
                     <graphic>
-                        <ImageView fx:id="caricaRisorsaButton" fitHeight="85.0" fitWidth="84.0" pickOnBounds="true"
-                                   preserveRatio="true">
+                        <ImageView fx:id="caricaRisorsaButton" fitHeight="85.0" fitWidth="84.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../../icon/file.png"/>
+                                <Image url="@../../icon/file.png" />
                             </image>
                         </ImageView>
                     </graphic>
