--- a/src/main/resources/css/assenze.css
+++ b/src/main/resources/css/assenze.css
@@ -35,7 +35,7 @@
     -fx-scale-y: 1.1;
 }
 
-#meseLabel{
+.meseLabel{
     -fx-font-size: 20px;
     -fx-font-weight: bold;
     -fx-text-fill: #1976D2;
